--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,10 @@
 version: '3.6'
 
 services:
-  samplewar:
+  warfile:
     build:
-      context: .
+      context: . # use current Dockerfile as image build context
     ports:
-      - "8080:8080"
+      - "8080:8080" # control web server exposed port
+    image: tomcat_deployment # name of the image to be created, use versioning
+    container_name: tomcat_container # custom container name used only for development purpose
