jdni data source example added

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,29 @@
 version: '3.6'
 
 services:
-  warfile:
+
+  postgres_service:
+    image: postgres:latest
+    container_name: local_postgres
+    environment:
+      - POSTGRES_USER=cornel
+      - POSTGRES_PASSWORD=sefusefu
+      - POSTGRES_DB=mydatabase
+    ports:
+      - 5432:5432
+    networks:
+      - testWebServerNetwork
+
+  tomcat_service:
     build:
       context: . # use current Dockerfile as image build context
     ports:
-      - "8080:8080" # control web server exposed port
+      - 8080:8080 # control web server exposed port
     image: tomcat_deployment # name of the image to be created, use versioning
     container_name: tomcat_container # custom container name used only for development purpose
+    networks:
+      - testWebServerNetwork
+
+networks:
+  testWebServerNetwork:
+    driver: bridge
